Fix Time#strftime with timezone [Bug #17042]